Add project files and remove some template files

--- a/environment.yaml
+++ b/environment.yaml
@@ -1,12 +1,14 @@
-name: py-ds-template1
+name: cat-breed-classifier
 channels:
   - conda-forge
-# Either install pre-commit outside this environment or add it here, not both
 dependencies:
-  - black
-  - flit
-  - geopy
-  - isort
-  - pre-commit
-  - pytest
-  - python>=3.10
+  - matplotlib
+  - mlflow
+  - numpy
+  - pandas
+  - pillow
+  - pytorch
+  - pytorch-ignite
+  - pyyaml
+  - tensorboard
+  - torchvision
